[tool.poetry]
name = "autify_project"
version = "0.1.0"
description = ""
authors = ["Andrew Doh <andrewddo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
SQLAlchemy = "^2.0.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
